# TS-API_integracao

./: .env  Dockerfile  README.md  docker-compose.yml  dockerfile.txt  main.py  nginx.config  nginx.dockerfile  pyproject.toml
api/: form.py  models.py  urls.py  views.py
api/migrations/: 0001_initial.py
api/templates/: base.html  home.html  vendas.html  vendas_form.html  vendas_list_all.html
project/: settings.py  urls.py
